@@ -45,6 +45,10 @@ VERSION 4.1.4
 
 ?$pgv_lang["whatever"]								dd Monthname, year		Change codes and comments
 -------------------------------------------------------------------------------------------
+*$pgv_lang["PEDIGREE_FULL_DETAILS"]					21 Mar 2008				w
+*$pgv_lang["PEDIGREE_FULL_DETAILS_help"]			21 Mar 2008				w
++$pgv_lang["PEDIGREE_SHOW_GENDER"]					21 Mar 2008				A
++$pgv_lang["PEDIGREE_SHOW_GENDER_help"]				21 Mar 2008				A
 *$pgv_lang["USE_RELATIONSHIP_PRIVACY_help"]			20 Mar 2008				W
 *$pgv_lang["MAX_RELATION_PATH_LENGTH_help"]			20 Mar 2008				W
 *$pgv_lang["SHOW_AGE_DIFF"]							17 Mar 2008				W
