@@ -224,8 +224,10 @@ $pgv_lang["SOURCE_ID_PREFIX"]		= "Source ID prefix";
 $pgv_lang["SOURCE_ID_PREFIX_help"]	= "~#pgv_lang[SOURCE_ID_PREFIX]#~<br /><br />When a new source record is added online in PhpGedView, a new ID for that source will be generated automatically.  The source ID will have this prefix.<br />";
 $pgv_lang["REPO_ID_PREFIX"]		= "Repository ID prefix";
 $pgv_lang["REPO_ID_PREFIX_help"]	= "~#pgv_lang[REPO_ID_PREFIX]#~<br /><br />When a new repository record is added online in PhpGedView, a new ID for that repository will be generated automatically. The repository ID will have this prefix.<br />";
-$pgv_lang["PEDIGREE_FULL_DETAILS"]	= "Show Birth and Death details on Pedigree and Descendancy charts";
-$pgv_lang["PEDIGREE_FULL_DETAILS_help"]	= "~#pgv_lang[PEDIGREE_FULL_DETAILS]#~<br /><br />This option controls whether or not to show the Birth and Death details of an individual by default.<br />";
+$pgv_lang["PEDIGREE_FULL_DETAILS"]	= "Show Birth and Death details on charts";
+$pgv_lang["PEDIGREE_FULL_DETAILS_help"]	= "~#pgv_lang[PEDIGREE_FULL_DETAILS]#~<br /><br />This option controls whether or not to show the Birth and Death details of an individual on charts.<br />";
+$pgv_lang["PEDIGREE_SHOW_GENDER"]	= "Show gender icon on charts";
+$pgv_lang["PEDIGREE_SHOW_GENDER_help"]	= "~#pgv_lang[PEDIGREE_SHOW_GENDER]#~<br /><br />This option controls whether or not to show the individual's gender icon on charts.<br /><br />Since the gender is also indicated by the color of the box, this option doesn't conceal the gender. The option simply removes some duplicate information from the box.<br />";
 $pgv_lang["PEDIGREE_LAYOUT"]		= "Default Pedigree chart layout";
 $pgv_lang["PEDIGREE_LAYOUT_help"]	= "~#pgv_lang[PEDIGREE_LAYOUT]#~<br /><br />This option indicates whether the Pedigree chart should be generated in landscape or portrait mode.<br />";
 $pgv_lang["SHOW_EMPTY_BOXES"]		= "Show empty boxes on Pedigree charts";
